Updating strip style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="bg-gradient"></div>
     <main>
-      <span class="range"></span>
+      <span class="strip"></span>
       <div class="container">
         <div class="avatar">
           <span>
